--- a/Nav/Responsive-Straight-Nav/index.html
+++ b/Nav/Responsive-Straight-Nav/index.html
@@ -2,19 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Imply content here">
     <meta name="keywords" content="">
     <meta name="author" content="Pascal Kuiper">
     <meta name="copyright" content="Pascal Kuiper">
     <meta name="robots" content="follow">
-    <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/#"></script>
+    <link rel="icon" href="#" type="image/gif"> <!--Fav icon link bar-->
+    <link rel="stylesheet" href="css/main.css"> <!--CSS link bar-->
+    <script src="js/#"></script> <!--JavaScript link bar-->
     <title>Responsive-Straight-Nav</title>
 </head>
 <body>
     <header>
-
+        <img class="logo" src="#" alt="logo">
+        <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <script src="#" async defer></script>
 </body>
 </html>
